<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ad_srtarevolution.course_1.MenuActivity">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/Tv_username"
        android:textColor="@color/textDark"
        android:textSize="50dp"
        android:text="@string/menu"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_below="@id/Tv_username"


        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/LL_menuPenyakitJantung"

            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/jantung"
                android:scaleType="centerCrop"
                android:background="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_penyakitJantung"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/textColor"
                android:textAlignment="center"
                android:gravity="center"
                android:textSize="19dp"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/LL_menuPenyakitParu"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/paru"
                android:background="@color/colorPrimaryDark"
                />
            <TextView
                android:textSize="19dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_penyakitParu"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/textColor"
                android:textAlignment="center"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/LL_menuPenyakitKornea"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/kornea"
                android:scaleType="centerCrop"
                android:background="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/menu_penyakitMata"
                android:background="@color/colorPrimaryDark"
                android:textSize="19dp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:textAlignment="center"
                android:gravity="center"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/LL_About"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/abt"
                android:scaleType="centerCrop"
                android:background="@color/colorPrimaryDark"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/about"
                android:background="@color/colorPrimaryDark"
                android:textSize="19dp"
                android:textStyle="bold"
                android:textColor="@color/textColor"
                android:textAlignment="center"
                android:gravity="center"
                />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
