<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ad_srtarevolution.course_1.MainActivity">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >
    <!--untuk membat linear ditengah-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_centerVertical="true"-->

    <ImageView
        android:id="@+id/iv_LogoKes"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/logo_jantung_kes"
        android:layout_gravity="center"
        android:scaleType="centerCrop"

        />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

    <EditText
        android:id="@+id/et_Emailusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usernameEmail_list"
        android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        >

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_list"
        android:inputType="textPassword"
        />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:text="@string/login_btn"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        android:background="@color/colorPrimaryDark"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apakah anda ingin mereset form ? "
            android:textColor="@color/textDark"
            android:textSize="15dp"
            />
        <TextView
            android:id="@+id/Tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:textSize="16dp"
            android:textStyle="bold"
            android:textColor="@color/textBlue"
            />



    </LinearLayout>


</LinearLayout>


</RelativeLayout>
